--- a/handbuilt-svm.ipynb
+++ b/handbuilt-svm.ipynb
@@ -108,10 +108,10 @@
     "    y_train = data['onehot_spanish'].to_numpy()\n",
     "\n",
     "    # Soft-SVM using Subgradient Descent\n",
-    "    alpha = 0.01\n",
+    "    alpha = 0.01 #learning rate\n",
     "    C = 1  # Regularization parameter\n",
     "    lambda_ = 0.01  # Regularization parameter\n",
-    "    w = np.zeros(len(X_train[0]))\n",
+    "    w = np.zeros(len(X_train[0])) #initializing weight vector\n",
     "\n",
     "    for n in range(1000):\n",
     "        for i in range(len(X_train)):\n",
